--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: #03A9F4;
+    background: #673AB7;
     overflow: hidden;
     color: #cecece;
     font-family: 'Ubuntu', 'Arial', sans-serif;
